--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -3,20 +3,35 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Stuck in Lambda</title>
+        <title>Marc Coquand</title>
         <link rel="stylesheet"
             href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-
-        <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:200,400" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:500" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" rel="stylesheet">
         <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
-        <h1>Posts</h1>
-        <ul>
-        {{#posts}}
-            <li><a href="{{url}}">{{title}}</a></li>
-        {{/posts}}
-        </ul>
+        <header class="pb2 mh3 mw7 mh5-ns  dark-gray">
+            <h3 class="fw5">
+                <a href="/" class="link black hover-moon-gray fw5">
+                    Personal Website
+                </a> | Marc Coquand
+            </h3>
+        </header>
+        <div class="db mw7 mh3 mh5-ns dark-gray pb3">
+            <h4 class="lh-title f2 fw5 mb0
+                ">Posts</h4>
+            <ul class="pa0 pb2">
+            {{#posts}}
+                <li><a class="link skobeloff hover-moon-gray fw5"
+                       href="{{url}}">{{date}} <i>{{title}}</i></a></li>
+            {{/posts}}
+            </ul>
+        </div>
+        <div class="db mw7 mh3 mh5-ns dark-gray pb5">
+            <h4 class="lh-title f2 fw5 mb0
+                ">Portfolio</h4>
+        </div>
     </body>
 </html>
 
