--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <base href="/Blog/">
+        <base href="/Blog/" />
         <title>{{title}}</title>
         <link rel="stylesheet"
             href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
