--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -24,8 +24,8 @@
                 ">Posts</h4>
             <ul class="pa0 pb2">
             {{#posts}}
-                <li><a class="link skobeloff hover-moon-gray fw5"
-                       href="{{url}}">{{date}} <i>{{title}}</i></a></li>
+                <li class="pb2"><a class="link skobeloff hover-moon-gray fw5"
+                       href="{{url}}">{{date}}: <i>{{title}}</i></a></li>
             {{/posts}}
             </ul>
         </div>
