changed fonts, tweaked css

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -1,41 +1,52 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
-        <base href="/Blog/" />
-        <title>{{title}}</title>
-        <link rel="stylesheet"
-            href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-        <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:500, 600" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="/css/style.css">
- 
-    </head>
-    <body>
-        <header class="pb2 mh3 mw7 mh5-ns  dark-gray">
-            <h3 class="fw5">
-                <a href="/" class="link black hover-moon-gray fw5">
-                    Personal Website
-                </a> | Marc Coquand
-            </h3>
-        </header>
-        <article class="db mw7 mh3 mh5-ns dark-gray pb5">
-            <h1 class="lh-title f2 f-headline-ns f-subheadline-m f1-m fw5 ">{{title}}</h1>
-            <h4 class="fw5 i">{{date}}</h4>
-            <div class="lh-copy first-capitalize f5 fw5 mw6">
-                {{{content}}}
-            </div>
-            <p class="f5 fw5">
-            Signing off,<br>
-            {{author}}
-            <p class="fw5 i gray mb2">
-                The source code for this blog can be found on <a class="link skobeloff hover-moon-gray
-                fw5" href="https://github.com/MarcCoquand/marccoquand.github.io">Github</a>.
-            </p>
-            <a href="/" class="link skobeloff hover-moon-gray 
-                fw5">‹ View more posts</a>
-            </p>
-        </article>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>{{title}}</title>
+    <meta name="Description" content="Author: Marc Coquand" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald"
+      rel="stylesheet"
+    />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+  </head>
+  <body>
+    <header class="pb2 mh3 mt4-ns mw7 mh5-ns dark-gray">
+      <h3 class="fw5 font-oswald">
+        <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> » Blog
+      </h3>
+    </header>
+    <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
+      <h1 class="lh-title f1 lh-copy fw5">{{title}}</h1>
+      <p class="fw4 f4 i">{{date}}</p>
+      <div class="lh-copy first-capitalize f4 pb3 fw5 mw6">{{{content}}}</div>
+      <p class="fw4 f4 i gray mb2">
+        The source code for this blog can be found on
+        <a
+          class="link skobeloff hover-moon-gray fw4"
+          href="https://github.com/MarcCoquand/marccoquand.github.io"
+          >Github</a
+        >.
+      </p>
+      <a href="/" class="f4 link skobeloff hover-moon-gray fw4"
+        >‹ View more posts</a
+      >
+    </article>
+  </body>
 </html>
