--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,44 +1,84 @@
 body {
-    font-family: 'Noto Serif SC', serif;
-}
-p {
-    margin-top: 1.8rem;
-    margin-bottom: 1.8rem;
-    line-height: 1.7;
-}
-.skobeloff {
-    color: #07777C
-}
-.first-capitalize p:first-child:first-letter{
-  float: left;
-  color: #07777c;
-  font-size: 3.4rem;
-  padding-top: 0.5rem;
-  padding-right: 0.3rem;
-}
-h2::before{
-    content: "› "; |
-}
-code:before{
-    content: "λ. \a";
-    color: #07777c;
-    white-space: pre-wrap;
-    font-weight: 700;
-}
-ul{ 
-    list-style-type: none;
-}
-code {
-    font-family: 'Fira Mono', monospace;
-    white-space: pre-wrap;
-    padding: 1rem;
-    color: #111111;
-    background-color: #f7f9f9;
-    width: 100%;
-    display: block;
+  font-family: "Scheherazade", serif;
 }
 
-hr {
-    color: #F4F4F4;
-    width: 60%;
+.font-oswald {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+}
+
+.article p {
+  line-height: 1.15;
+}
+
+.skobeloff {
+  color: #07777c;
+}
+
+.first-capitalize p:first-child:first-letter {
+  float: left;
+  color: #07777c;
+  font-size: 3.5rem;
+  padding-top: 0.6rem;
+  padding-right: 0.3rem;
+  box-sizing: border-box;
+}
+.article h2 {
+  font-size: 2.5rem;
+  margin-bottom: -0.3rem;
+  font-weight: 400;
+  line-height: 2rem;
+}
+.article h3 {
+  line-height: 2rem;
+  font-weight: 400;
+  margin-bottom: -0.5rem;
+  margin-top: 2.9rem;
+}
+
+.article code:before {
+  content: "λ. \a";
+  color: #07777c;
+  white-space: pre-wrap;
+  font-weight: 700;
+  font-size: 0.9rem;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.article h3 {
+  font-size: 1.5rem;
+}
+.article code {
+  font-family: "Fira Mono", monospace;
+  font-size: 0.85rem;
+  white-space: pre-wrap;
+  padding: 1rem;
+  color: #111111;
+  background-color: #f7f9f9;
+  width: 100%;
+  display: block;
+}
+
+.article blockquote {
+  margin-left: 0;
+  font-style: italic;
+}
+
+.article blockquote:before {
+  content: open-quote;
+  font-size: 3em;
+  font-style: normal;
+  font-weight: 700;
+  color: #b7b7b7;
+  margin-right: -1rem;
+  z-index: -1;
+}
+
+.article hr {
+  color: #f4f4f4;
+  width: 60%;
 }
