--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -28,15 +28,15 @@
   </head>
   <body>
     <header class="pb2 mh3 mt4-ns mw7 mh5-ns dark-gray">
-      <h3 class="fw5 font-oswald">
+      <h3 class="fw5 font-oswald upcase">
         <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> » Blog
       </h3>
     </header>
     <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
-      <h1 class="lh-title f1 lh-copy fw5">{{title}}</h1>
-      <p class="fw4 f4 i">{{date}}</p>
-      <div class="lh-copy first-capitalize f4 pb3 fw5 mw6">{{{content}}}</div>
-      <p class="fw4 f4 i gray mb2">
+      <h1 class="f2 fw7 ttu tracked lh-title avenir upcase">{{title}}</h1>
+      <p class="fw4 f3 i">{{date}}</p>
+      <div class="lh-copy first-capitalize f3 pb3 fw5 mw6">{{{content}}}</div>
+      <p class="fw4 f3 i gray mb2">
         The source code for this blog can be found on
         <a
           class="link skobeloff hover-moon-gray fw4"
