--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -9,9 +9,7 @@
       rel="stylesheet"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
     />
-
-    <link
-      href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
+    <link href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
       rel="stylesheet"
     />
 
@@ -27,14 +25,14 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="pb2 mh3 mt4-ns mw7 mh5-ns dark-gray">
-      <h3 class="fw5 font-oswald upcase">
+    <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray">
+      <h3 class="fw5 f5 oswald upcase ttu tracked">
         <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> » Blog
       </h3>
     </header>
     <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
-      <h1 class="f2 fw7 ttu tracked lh-title avenir upcase">{{title}}</h1>
-      <p class="fw4 f3 i">{{date}}</p>
+      <h1 class="f2 fw7 lh-title oswald ">{{title}}</h1>
+      <p class="fw4 f3 i pt4 pb0">{{date}}</p>
       <div class="lh-copy first-capitalize f3 pb3 fw5 mw6">{{{content}}}</div>
       <p class="fw4 f3 i gray mb2">
         The source code for this blog can be found on
@@ -44,7 +42,7 @@
           >Github</a
         >.
       </p>
-      <a href="/" class="f4 link skobeloff hover-moon-gray fw4"
+      <a href="/" class="f3 link skobeloff hover-moon-gray fw4"
         >‹ View more posts</a
       >
     </article>
