--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -23,30 +23,34 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <header class="pb2 mh3 mt4-ns mw7 mh5-ns dark-gray">
-    <h3 class="fw5 font-oswald">Marc Coquand » Personal Website</h3>
-  </header>
+    <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray ">
+      <h3 class="fw5 f5 oswald upcase ttu tracked " style="display: flex">
+          <a href="/" class= "link black hover-moon-gray">Marc Coquand</a><div
+             class="hypertext">» Landing</div>
+      </h3>
+        <div class="stylish-box fw5 f5 ttu tracked upcase oswald">
+          <p class="hypertext">Programmer and Front-end designer.</p>
+        </div>
+        <script src="/js/hypertext.js"></script>
+    </header>
   <body>
-    <div class="db mw7 mh3 mh5-ns dark-gray pb3">
+    <div class="db mw7 mh3 f3 mh5-ns dark-gray pb3">
       <h4
-        class="lh-title f2 fw5 mb0
-                "
-      >
+        class="lh-title f2 fw5 mb0" >
         Blog Posts
       </h4>
       <ul class="pa0 pb2">
         {{#posts}}
         <li class="pb2">
-          <a class="link f4 skobeloff hover-moon-gray fw5" href="{{url}}"
+          <a class="link skobeloff hover-moon-gray fw5" href="{{url}}"
             >{{date}}: <i>{{title}}</i></a
           >
         </li>
         {{/posts}}
       </ul>
     </div>
-    <div class="db mw7 f4 mh3 mh5-ns dark-gray pb3 pt7">
+    <div class="db mw7 mh3 mh5-ns dark-gray pb3 pt7 f3">
       <hr />
-      <p>
         Contact me on
         <a
           class="link skobeloff hover-moon-gray fw5"
