--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -13,10 +13,7 @@
       href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Oswald"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"
       rel="stylesheet"
@@ -24,11 +21,10 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
     <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray ">
-      <h3 class="fw5 f5 oswald upcase ttu tracked " style="display: flex">
-          <a href="/" class= "link black hover-moon-gray">Marc Coquand</a><div
-             class="hypertext">» Landing</div>
+      <h3 class="fw5 f5 sarabun upcase ttu tracked ">
+          <a href="/" class= "link black hover-moon-gray">Marc Coquand&nbsp</a>
       </h3>
-        <div class="stylish-box fw5 f5 ttu tracked upcase oswald">
+        <div class="stylish-box fw5 f5 ttu tracked upcase sarabun">
           <p class="hypertext">Programmer and Front-end designer.</p>
         </div>
         <script src="/js/hypertext.js"></script>
@@ -36,7 +32,7 @@
   <body>
     <div class="db mw7 mh3 f3 mh5-ns dark-gray pb3">
       <h4
-        class="lh-title f2 fw5 mb0" >
+        class="lh-title sarabun ttu tracked f3 fw5 mb0" >
         Blog Posts
       </h4>
       <ul class="pa0 pb2">
@@ -49,7 +45,7 @@
         {{/posts}}
       </ul>
     </div>
-    <div class="db mw7 mh3 mh5-ns dark-gray pb3 pt7 f3">
+    <div class="db mw7 mh3 mh5-ns dark-gray pb3 pt6 f3">
       <hr />
         Contact me on
         <a
