--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -13,10 +13,7 @@
       rel="stylesheet"
     />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Oswald"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
 
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"
@@ -26,12 +23,13 @@
   </head>
   <body>
     <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray">
-      <h3 class="fw5 f5 oswald upcase ttu tracked">
-        <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> » Blog
+      <h3 class="fw5 f5 sarabun upcase ttu tracked">
+        <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> »
+        Article
       </h3>
     </header>
     <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
-      <h1 class="f2 fw7 lh-title oswald ">{{title}}</h1>
+      <h1 class="f1 fw7 lh-title ">{{title}}</h1>
       <p class="fw4 f3 i pt4 pb0">{{date}}</p>
       <div class="lh-copy first-capitalize f3 pb3 fw5 mw6">{{{content}}}</div>
       <p class="fw4 f3 i gray mb2">
