--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -25,7 +25,7 @@
           <a href="/" class= "link black hover-moon-gray">Marc Coquand&nbsp</a>
       </h3>
         <div class="stylish-box fw5 f5 ttu tracked upcase sarabun">
-          <p class="hypertext">Programmer and Front-end designer.</p>
+          <p class="hypertext">Software engineering and design.</p>
         </div>
         <script src="/js/hypertext.js"></script>
     </header>
