added article about cardinality

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -9,11 +9,15 @@
       rel="stylesheet"
       href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"
     />
-    <link href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
+    <link
+      href="https://fonts.googleapis.com/css?family=Scheherazade:400,700"
       rel="stylesheet"
     />
 
-    <link href="https://fonts.googleapis.com/css?family=Sarabun" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Sarabun"
+      rel="stylesheet"
+    />
 
     <link
       href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"
@@ -23,7 +27,7 @@
   </head>
   <body>
     <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray">
-      <h3 class="fw5 f5 sarabun upcase ttu tracked">
+      <h3 class="fw5  f5 sarabun upcase ttu tracked">
         <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> »
         Article
       </h3>
@@ -31,7 +35,9 @@
     <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
       <h1 class="f1 fw7 lh-title ">{{title}}</h1>
       <p class="fw4 f3 i pt4 pb0">{{date}}</p>
-      <div class="lh-copy first-capitalize f3 pb3 fw5 mw6">{{{content}}}</div>
+      <div class="lh-copy dashed-list first-capitalize f3 pb3 fw5 mw6">
+        {{{content}}}
+      </div>
       <a href="/" class="f3 link skobeloff hover-moon-gray fw4"
         >‹ View more posts</a
       >
