--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -35,9 +35,9 @@
         class="lh-title sarabun ttu tracked f3 fw5 mb0" >
         Blog Posts
       </h4>
-      <ul class="pa0 pb2">
+      <ul class="pa0 pb2 no-bullets">
         {{#posts}}
-        <li class="pb2">
+        <li class="pb2 ">
           <a class="link skobeloff hover-moon-gray fw5" href="{{url}}"
             >{{date}}: <i>{{title}}</i></a
           >
