--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -15,32 +15,28 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Sarabun"
-      rel="stylesheet"
-    />
-
-    <link
       href="https://fonts.googleapis.com/css?family=Fira+Mono:400,700"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="pb2 mh3 mt4-ns mw7 pb5 mh5-ns dark-gray">
-      <h3 class="f5 gotham upcase ttu tracked">
-        <a href="/" class="link black hover-moon-gray ">Marc Coquand</a> »
+    <header class="pb2 mh3 mt4-ns mw7 pb5-ns mh5-ns dark-gray">
+      <h3 class="f6 gotham upcase ttu fw5 tracked">
+        <a href="/" class="link black hover-moon-gray">Marc Coquand</a> »
         Article
       </h3>
     </header>
-    <article class="article db mw7 mh3 mh5-ns dark-gray pb5">
-      <h1 class="f1 fw7 lh-title ">{{title}}</h1>
-      <p class="fw4 f3 i pt4 pb0">{{date}}</p>
-      <div class="lh-copy dashed-list first-capitalize f3 pb3 fw5 mw6">
+    <article class="article dark-gray pb4 pb6-ns mh3">
+      <div class="lh-copy dashed-list f3 pb3 fw5 mw6 auto ">
+        <h1 class="f1-ns scheherazade fw7 lh-title tc-ns ph3-ns">{{title}}</h1>
+        <hr />
+        <p class="fw4 f3 pb0 pt3 ">{{date}}</p>
         {{{content}}}
+        <a href="/" class="f3 article-size link skobeloff hover-moon-gray fw4"
+          >‹ View more posts</a
+        >
       </div>
-      <a href="/" class="f3 link skobeloff hover-moon-gray fw4"
-        >‹ View more posts</a
-      >
     </article>
   </body>
 </html>
