--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -26,7 +26,7 @@
   </header>
   <body>
     <div class="db mw7 mh5-ns mt4 f3 flex dark-gray">
-      <div class="bl mw6 ph3 ">
+      <div class="bl mw6 mh2 ph3 bw1 tl-ns ">
         <h4 class="f5 gotham ttu tracked">Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
