--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,6 +1,8 @@
 @font-face {
-  font-family: "Gotham Book" !important;
-  src: url("../res/gotham.otf") format("embedded-opentype");
+  font-family: "Gotham Book";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Gotham Book"), url("../res/gotham.otf") format("opentype");
 }
 body {
   font-family: "Gotham Book" !important;
