--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -17,7 +17,9 @@
   </head>
   <header class="pb2 mh3 mt4-ns mw7 mh5-ns dark-gray ">
     <h3 class="fw5 f6 gotham upcase ttu tracked ">
-      <a href="/" class="link black hover-moon-gray fw5">Marc Coquand&nbsp</a>
+      <a href="/" class="link black hover-moon-gray fw5"
+        ><b>Marc Coquand</b>&nbsp</a
+      >
     </h3>
     <div class="stylish-box f6 fw5 ttu tracked gotham b">
       <p class="hypertext">Software engineering and design.</p>
@@ -30,7 +32,7 @@
         <h4 class="f3 gotham ttu tracked">Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
-          <li>
+          <li class="pv1">
             <a class="link skobeloff hover-moon-gray fw5 f5" href="{{url}}"
               >{{date}}: {{title}}</a
             >
