--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -29,7 +29,7 @@
     </header>
     <article class="article dark-gray pb4 pb6-ns mh3">
       <div class="dashed-list f3 pb3 fw5 mw6 auto ">
-        <h1 class="firamono f3-ns pb4-ns fw7 tc-ns lh-title">{{title}}</h1>
+        <h1 class="firamono f3-ns pb4-ns fw7 tc-ns lh-copy">{{title}}</h1>
         <hr class="mb4-ns" />
         <p class="fw4 f3 pb0 pt5-ns ">{{date}}</p>
         {{{content}}}
