--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <header class="pb2 mh3 mt4-ns mw7 pb5-ns mh5-ns dark-gray">
+    <header class="pb2 mh3 mt4-ns mw7 pb6-ns mh5-ns dark-gray">
       <h3 class="f6 gotham upcase ttu f mid-gray w5 tracked">
         <a href="/" class="link dark-gray hover-moon-gray">Marc Coquand</a>
         <b>/</b> Article
@@ -29,9 +29,11 @@
     </header>
     <article class="article dark-gray pb4 pb6-ns mh3">
       <div class="dashed-list f3 pb3 fw5 mw6 auto ">
-        <h1 class="firamono f3-ns pb4-ns fw7 tc-ns lh-copy">{{title}}</h1>
-        <hr class="mb4-ns" />
-        <p class="fw4 f3 pb0 pt5-ns ">{{date}}</p>
+        <h1 class="firamono ttu tracked-mega f2 pb4-ns fw7 lh-copy">
+          {{title}}
+        </h1>
+        <hr />
+        <p class="fw4 f3 pb0 pt3-ns ">{{date}}</p>
         {{{content}}}
         <a href="/" class="f3 article-size link skobeloff hover-moon-gray fw4"
           >‹ View more posts</a
