--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -27,9 +27,9 @@
     <script rel="preload" src="/js/hypertext.js"></script>
   </header>
   <body>
-    <div class="db mw7 mh5-ns mt4 f3 flex dark-gray">
-      <div class="tl-ns">
-        <h4 class="f3 gotham ttu tracked">Posts</h4>
+    <div class="db mw7 mh3 mh5-ns mt4 f3 flex dark-gray">
+      <div class="tl-ns ">
+        <h1 class="f2 gotham ttc tracked-mega lc-copy ">Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
           <li class="pv1">
