--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -29,10 +29,10 @@
   <body>
     <div class="db mw7 mh3 mh5-ns mt4 f3 flex dark-gray">
       <div class="tl-ns ">
-        <h1 class="f2 gotham ttc tracked-mega lc-copy ">Posts</h4>
+        <h1 class="f3 gotham ttc tracked-mega lc-copy ">Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
-          <li class="pv1">
+          <li class="pv1 ttc">
             <a class="link skobeloff hover-moon-gray fw5 f5" href="{{url}}"
               >{{date}}: {{title}}</a
             >
