--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -29,20 +29,19 @@
   <body>
     <div class="db mw6 ph3 mh3 mh5-ns f3 flex dark-gray auto">
       <div class="tl-ns ">
-        <h1 class="f3 gotham ttc tracked-mega lc-copy ">Posts</h4>
+        <h1 class="f3 ttu firamono tracked-mega lc-copy ">›Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
-          <li class="pv1 ttc">
-            <a class="link skobeloff hover-moon-gray fw5 f5" href="{{url}}"
-              >{{date}}: {{title}}</a
-            >
+          <li class="pv2 ttc ">
+            <a class="link skobeloff hover-moon-gray fw5 mb3 f5 " href="{{url}}">
+            <div class="firamono">{{date}}</div> {{title}}</a>
           </li>
           {{/posts}}
         </ul>
-        <p class="f5 fw5 pt4">
+        <p class="f5 fw5 pt4 pt5-ns pb3-ns">
           Contact me on
           <a
-            class="link skobeloff hover-moon-gray fw5 f5"
+            class="link skobeloff hover-moon-gray  fw5 f5"
             href="https://www.linkedin.com/in/marc-coquand-7449b3123/"
             >Linkedin</a
           >.
