changed date slightly

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -29,7 +29,9 @@
           {{title}}
         </h1>
         <hr />
-        <p class="fw7 f3 pb0 pt3-ns firamono mid-gray tracked-mega">{{date}}</p>
+        <p class="fw7 f3 pb0 pt3-ns pb3-ns firamono mid-gray tracked-mega">
+          {{date}}
+        </p>
         {{{content}}}
         <a href="/" class="f3 article-size link skobeloff hover-moon-gray fw4"
           >‹ View more posts</a
