removed bottom padding

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -25,9 +25,7 @@
     </header>
     <article class="article dark-gray pb4 pb6-ns mh3">
       <div class="dashed-list f3 pb3 fw5 mw6-ns auto ">
-        <h1 class="firamono ttu tracked-mega f2 pb5-ns fw7 lh-copy">
-          {{title}}
-        </h1>
+        <h1 class="firamono ttu tracked-mega f2 fw7 lh-copy">{{title}}</h1>
         <hr />
         <p class="fw7 f3 pb0 pt3-ns pb3-ns firamono mid-gray tracked-mega">
           {{date}}
