--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -18,7 +18,7 @@
   <header class="pb5-ns pb2 mh3 mt4-ns mw7 mh5-ns dark-gray ">
     <h3 class="fw5 f6 gotham upcase ttu tracked ">
       <a href="/" class="link black hover-moon-gray fw5"
-        ><b>Marc Coquand</b>&nbsp</a
+        ><b>The Predicate</b>&nbsp</a
       >
     </h3>
     <div class="stylish-box f6 fw5 ttu tracked gotham b">
@@ -27,8 +27,7 @@
     <script rel="preload" src="/js/hypertext.js"></script>
   </header>
   <body>
-    <div class="db mw6 ph3 ph0-ns mh3 mh5-ns f3 flex dark-gray auto">
-      <div class="tl-ns ">
+    <div class="db mw7 ph3 ph0-ns mh3 mh5-ns f3 dark-gray auto tl-ns">
         <h1 class="f3 ttu firamono tracked-mega lc-copy ">›Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
@@ -38,15 +37,22 @@
           </li>
           {{/posts}}
         </ul>
-        <p class="f5 fw5 pt4 pt5-ns pb3-ns">
-          Contact me on
+        <hr />
+        <p class="f5 fw5 mt3">
+        Created by Marc Coquand.
+        </p>
+        <p class="f5 fw5 pb3">
           <a
-            class="link skobeloff hover-moon-gray  fw5 f5"
+            class="link skobeloff hover-moon-gray b fw5 f5"
             href="https://www.linkedin.com/in/marc-coquand-7449b3123/"
             >Linkedin</a
-          >.
+          > | 
+          <a
+            class="link skobeloff hover-moon-gray b fw5 f5"
+            href="https://github.com/MarcCoquand/"
+            >Github</a
+          >
         </p>
-      </div>
     </div>
   </body>
 </html>
