--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <header class="pb5-ns pb2 mh3 mt4-ns mw7 mh5-ns dark-gray ">
+  <header class="pb5-l pb2 mh3 mt4-ns mw7 mh5-l dark-gray ">
     <h3 class="fw5 f6 gotham upcase ttu tracked ">
       <a href="/" class="link black hover-moon-gray fw5"
         ><b>The Predicate</b>&nbsp</a
@@ -27,7 +27,7 @@
     <script rel="preload" src="/js/hypertext.js"></script>
   </header>
   <body>
-    <div class="db mw7 ph3 ph0-ns mh3 mh5-ns f3 dark-gray auto tl-ns">
+    <div class="db mw7 ph3 ph0-ns mh3 mh5-l f3 dark-gray auto tl-ns">
         <h1 class="f3 ttu firamono tracked-mega lc-copy ">›Posts</h4>
         <ul class="no-bullets ph0">
           {{#posts}}
