--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -28,14 +28,14 @@
   </header>
   <body>
     <div class="db mw7 ph3 ph0-ns mh3 mh5-l f3 dark-gray auto tl-ns">
-        <h1 class="f3 ttu firamono tracked-mega lc-copy ">›Posts</h4>
+        <h1 class="f3 ttu firamono tracked-mega lc-copy ">›Articles</h4>
         <ul class="no-bullets ph0">
-          {{#posts}}
+          {{#articles}}
           <li class="pv3 ttc ">
             <a class="link skobeloff hover-moon-gray fw5 mb3 f5 " href="{{url}}">
             <div class="firamono">{{date}}</div> {{title}}</a>
           </li>
-          {{/posts}}
+          {{/articles}}
         </ul>
         <hr />
         <p class="f5 fw5 mt3">
